# pet_proj

./: README.md
MemakePrj/: CMakeLists.txt  CMakeSettings.json  kernel.cl  main.cpp  mat2x2.h
MemakePrj/Memake/: Colmake.h  Memake.cpp  Memake.h  Polygon.h  Utils.h
MultiThreadPoints/: MultiThreadPoints.sln  readme.md
MultiThreadPoints/MultiThreadPoints/: MultiThreadPoints.cpp  MultiThreadPoints.vcxproj
OpenCL-HelloWorld/: OpenCL-HelloWorld.sln
OpenCL-HelloWorld/OpenCL-HelloWorld/: OpenCL-HelloWorld.cpp  OpenCL-HelloWorld.vcxproj
OpenCL-filter-img/: CMakeLists.txt  OpenCL-filter-img.cpp  kernel.cl  readme.txt
OpenCL-matrix-mult/: OpenCL-matrix-mult.sln
OpenCL-matrix-mult-cached/: OpenCL-matrix-mult-cached.sln
OpenCL-matrix-mult-cached/OpenCL-matrix-mult-cached/: OpenCL-matrix-mult-cached.cpp  OpenCL-matrix-mult-cached.vcxproj  cached_matrix_multiplication.cl
OpenCL-matrix-mult/OpenCL-matrix-mult/: OpenCL-matrix-mult.cpp  OpenCL-matrix-mult.vcxproj
SharedPtrPerformance/: SharedPtrPerformance.sln  readme.md
SharedPtrPerformance/SharedPtrPerformance/: SharedPtrPerformance.cpp  SharedPtrPerformance.vcxproj
